compiler/arc/src/snapshots/arc__serializer__tests__empty_file.snap
---
source: compiler/arc/src/serializer.rs
expression: "parse_err(\"\")"
---
ArcfileNoPackages {
    path: "<test>",
}
