compiler/arc/src/snapshots/arc__serializer__tests__incompatible_version.snap
---
source: compiler/arc/src/serializer.rs
expression: parser.parse().unwrap_err()
---
ArcfileIncompatibleLumeVersion {
    source: SourceFile {
        id: SourceFileId(
            PackageId(
                0,
            ),
            0,
        ),
        name: Internal,
        content: "Package \"sample\" {\n                version = \"1.0.0\"\n                lume_version = \"^2\"\n            }",
        package: PackageId(
            0,
        ),
    },
    range: 84..88,
    current: Version {
        major: 1,
        minor: 0,
        patch: 0,
    },
    required: VersionReq {
        comparators: [
            Comparator {
                op: Caret,
                major: 2,
                minor: None,
                patch: None,
                pre: Prerelease(""),
            },
        ],
    },
}
