compiler/arc/src/snapshots/arc__serializer__tests__invalid_version_string.snap
---
source: compiler/arc/src/serializer.rs
description: "Package \"sample\" {\n                lume_version = \"^1-1\"\n            }"
---
ArcfileInvalidVersion {
    source: SourceFile {
        id: SourceFileId(
            PackageId(
                0,
            ),
            0,
        ),
        name: Internal,
        content: "Package \"sample\" {\n                lume_version = \"^1-1\"\n            }",
        package: PackageId(
            0,
        ),
    },
    range: 50..56,
    version: "^1-1",
    field: "lume_version",
}
