compiler/arc/src/snapshots/arc__serializer__tests__license.snap
---
source: compiler/arc/src/serializer.rs
description: "Package \"sample\" {\n                lume_version = \"^0\"\n                license = \"MIT\"\n            }"
---
Project {
    path: "<test>",
    packages: [
        Package {
            id: PackageId(
                12880147300572693285,
            ),
            path: "",
            name: "sample",
            lume_version: Spanned {
                value: VersionReq {
                    comparators: [
                        Comparator {
                            op: Caret,
                            major: 0,
                            minor: None,
                            patch: None,
                            pre: Prerelease(""),
                        },
                    ],
                },
                span: 50..54,
            },
            version: None,
            description: None,
            license: Some(
                "MIT",
            ),
            repository: None,
            files: [],
        },
    ],
}
