compiler/arc/src/snapshots/arc__serializer__tests__multiple_packages.snap
---
source: compiler/arc/src/serializer.rs
description: "Package \"package01\" { lume_version = \"^0\" }\n            Package \"package02\" { lume_version = \"^0\" }\n            Package \"package03\" { lume_version = \"^0\" }"
---
Project {
    path: "<test>",
    packages: [
        Package {
            id: PackageId(
                15206054269443803754,
            ),
            path: "",
            name: "package01",
            lume_version: Spanned {
                value: VersionReq {
                    comparators: [
                        Comparator {
                            op: Caret,
                            major: 0,
                            minor: None,
                            patch: None,
                            pre: Prerelease(""),
                        },
                    ],
                },
                span: 37..41,
            },
            version: None,
            description: None,
            license: None,
            repository: None,
        },
        Package {
            id: PackageId(
                9095520778829737859,
            ),
            path: "",
            name: "package02",
            lume_version: Spanned {
                value: VersionReq {
                    comparators: [
                        Comparator {
                            op: Caret,
                            major: 0,
                            minor: None,
                            patch: None,
                            pre: Prerelease(""),
                        },
                    ],
                },
                span: 93..97,
            },
            version: None,
            description: None,
            license: None,
            repository: None,
        },
        Package {
            id: PackageId(
                5894625475714769553,
            ),
            path: "",
            name: "package03",
            lume_version: Spanned {
                value: VersionReq {
                    comparators: [
                        Comparator {
                            op: Caret,
                            major: 0,
                            minor: None,
                            patch: None,
                            pre: Prerelease(""),
                        },
                    ],
                },
                span: 149..153,
            },
            version: None,
            description: None,
            license: None,
            repository: None,
        },
    ],
}
