compiler/arc/src/snapshots/arc__serializer__tests__version.snap
---
source: compiler/arc/src/serializer.rs
description: "Package \"sample\" {\n                lume_version = \"^0\"\n                version = \"1.0.0\"\n            }"
---
Project {
    path: "<test>",
    packages: [
        Package {
            id: PackageId(
                12880147300572693285,
            ),
            path: "",
            name: "sample",
            lume_version: Spanned {
                value: VersionReq {
                    comparators: [
                        Comparator {
                            op: Caret,
                            major: 0,
                            minor: None,
                            patch: None,
                            pre: Prerelease(""),
                        },
                    ],
                },
                span: 50..54,
            },
            version: Some(
                Spanned {
                    value: Version {
                        major: 1,
                        minor: 0,
                        patch: 0,
                    },
                    span: 81..88,
                },
            ),
            description: None,
            license: None,
            repository: None,
            files: [],
        },
    ],
}
