compiler/arc/src/snapshots/arc__serializer__tests__with_unexpected_lume_version_type.snap
---
source: compiler/arc/src/serializer.rs
description: "Package \"sample\" {\n                lume_version = 1\n            }"
---
ArcfileUnexpectedType {
    source: SourceFile {
        id: SourceFileId(
            PackageId(
                0,
            ),
            0,
        ),
        name: Internal,
        content: "Package \"sample\" {\n                lume_version = 1\n            }",
        package: PackageId(
            0,
        ),
    },
    range: 35..51,
    expected: "String",
    found: "Integer",
}
